se corrigen links del footer, y del boton

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <br>
 
             <div class="d-grid mb-2 offset-sm-8">
-                <form action="Evaluacion1-OrdenDeTrabajo.html" method="GET">
+                <form action="index.html" method="GET">
                     <div id=msg style="padding-left: 13rem; padding-top: 1rem;"></div> <input type="submit" class="btn btn-info btn-lg" name="btnEnviar" value="Enviar">
                 </form>
             </div>
@@ -243,7 +243,7 @@
                 <a href="#">Inicio</a>
                 <a href="#">Sucursales</a>
                 <a href="#">Productos</a>
-                <a href="Evaluacion1-OrdenDeTrabajo.html">Registro</a>
+                <a href="index.html">Orden de Trabajo</a>
             </div>
             </div>
         
