se cambia nombre de empresa en navbar
de los cleaners a superclean

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg fixed-top navbar-light" id="navbar1">
-                <a class="navbar-brand" href="#"><img id="logoImg" src="images/logo2.png"> Los Cliners</a>
+                <a class="navbar-brand" href="#"><img id="logoImg" src="images/logo2.png">SUperClean</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
