se arregla problema con suma en ckb

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
             <div class="row row offset-sm-2">
                 <div class="col-12 col-sm-2 col-lg-2 col-xl-2"></div>
-                    <form>
+                <form name=form1 method=post action=check.php>
                     <table>
                     <tr><td style="padding-right: 70px; padding-left: 15px;"><input type=checkbox name=ckb value=5000 onclick='chkcontrol(0)';> Lavado Exterior <br> Valor: $5.000 (NETO)</td>
                         <td><input type=checkbox name=ckb value=8000 onclick='chkcontrol(1)';> Lavado Motor <br> Valor: $8.000 (NETO) </td></tr>
