se mueve script chk al body

--- a/index.html
+++ b/index.html
@@ -249,6 +249,21 @@
 
                 </footer>
             </div>
+            <script>
+                
+function chkcontrol(j) {
+	var sum=0;
+	for(var i=0; i < document.form1.ckb.length; i++){
+	
+	if(document.form1.ckb[i].checked){
+	sum = sum + parseInt(document.form1.ckb[i].value) * 1.19;
+	}
+	document.getElementById("msg").innerHTML="Total Servicio(s) : "+ sum + " IVA incluido";
+	
+	document.getElementById("msg").innerHTML="Total Servicio(s) : $"+ sum + " IVA incluido";
+	}
+	}
+            </script>
 
 </body>  
 
