--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width; initial-scale=1"/>
+            <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
             <title> SuperClean - Orden de Trabajo</title> 
             <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
             <link rel="icon" href="images/favicon.ico" type="image/x-icon">
